# GraphicsRush

./: .gitignore  README.md  User_Manual_Graphics_Rush.docx
GraphicsRush/: CMakeLists.txt
GraphicsRush/TrackFiles/: P1.txt  P2.txt  P3.txt  P4.txt  P5.txt  complicated.txt  large.txt  physics.txt  reversi.txt  tall.txt  testRun.txt  upside_circle.txt  weird.txt
GraphicsRush/data/: Image_list.txt  brainstorm.docx  model_list.txt  player.txt
GraphicsRush/lib/: freetyped.lib
GraphicsRush/src/: Boss.H  Boss.cpp  CallBacks.H  CallBacks.cpp  Filter.H  Firework.H  GMTPipeline.H  GMTPipeline.cpp  MiniBoss.H  MiniBoss.cpp  Model.H  Model.cpp  Object.H  Object.cpp  Obstacle.H  Obstacle.cpp  Player.H  Player.cpp  Rain.H  ShaderInfo.H  Shop.H  Shop.cpp  Star.H  Track.H  Track.cpp  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp
GraphicsRush/src/RenderUtilities/: BufferObject.h  Environment.h  Shader.h  Shadow.h  Texture.h
GraphicsRush/src/shaders/: blending.frag  blending.vert  blending_flat.vert  blending_flat_gray.frag  choose.frag  choose.vert  choose_flat.vert  door.frag  door.vert  environment.frag  environment.vert  firework.frag  firework.vert  hp.frag  hp.vert  rain.frag  rain.vert  screen.frag  screen.vert  shadow.frag  shadow.vert  shadowDebug.frag  shadowDebug.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  star.vert  text.frag  text.vert  water_surface.frag  water_surface.vert
